Update hooks and dependencies in config
This update modifies the hooks and import statements within the Base64PluginOptions to improve handling of file data. It also includes the package-lock.json, which lists the specific version of each dependency installed in the application, allowing for more accurate replication of the environment.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "payload-base64-plugin",
+  "name": "@raffaeleparisi/payload-base64-plugin",
   "version": "1.2.0",
   "description": "Payload CMS plugin for automatic base64 encoding of images",
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
-    "prepare": "yarn build",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
