Update package name and version, add publishConfig
The commit includes an update to package name by prepending "@raffaeleparisi/" in both package.json and package-lock.json files. Additionally, it increments the package version from 1.2.0 to 1.2.1. Finally, a publishConfig field has been added to the package.json file to indicate the registry where the package will be published.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raffaeleparisi/payload-base64-plugin",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Payload CMS plugin for automatic base64 encoding of images",
   "main": "lib/index.js",
   "scripts": {
@@ -20,6 +20,9 @@
   "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/leonardstruck/payload-base64-plugin/issues"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "homepage": "https://github.com/leonardstruck/payload-base64-plugin#readme",
   "dependencies": {
