--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@raffaeleparisi/payload-base64-plugin",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Payload CMS plugin for automatic base64 encoding of images",
-  "main": "lib/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
