--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@raffaeleparisi/payload-base64-plugin",
   "version": "1.2.2",
   "description": "Payload CMS plugin for automatic base64 encoding of images",
-  "main": "src/index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
-    "payload": "^1.0.11",
+    "payload": "^2.9.0",
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
   },
